// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryItem Has stock with no limit 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root Item MuiGrid-item"
  >
    <div
      class="MuiPaper-root MuiCard-root MuiPaper-outlined"
    >
      <img
        alt="Some Hardware"
        class="MuiCardMedia-root ItemPic MuiCardMedia-media MuiCardMedia-img"
        src="hackathon_site/dashboard/frontend/src/assets/images/testImages/IO6e5a6.jpg"
      />
    </div>
    <div
      class="ItemTextBox"
    >
      <div
        class="ItemName"
      >
        <p
          class="MuiTypography-root MuiTypography-body2"
        >
          Some Hardware
        </p>
      </div>
      <span
        class="MuiTypography-root inStock MuiTypography-caption"
      >
        4 OF 6 IN STOCK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InventoryItem Out of Stock 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root Item MuiGrid-item"
  >
    <div
      class="MuiPaper-root MuiCard-root ItemPicBox MuiPaper-outlined"
    >
      <img
        alt="Some Hardware"
        class="MuiCardMedia-root ItemPic MuiCardMedia-media MuiCardMedia-img"
        src="hackathon_site/dashboard/frontend/src/assets/images/testImages/IO6e5a6.jpg"
      />
    </div>
    <div
      class="ItemTextBox"
    >
      <div
        class="ItemName"
      >
        <p
          class="MuiTypography-root MuiTypography-body2"
        >
          Some Hardware
        </p>
      </div>
      <span
        class="MuiTypography-root outOfStock MuiTypography-caption"
      >
        OUT OF STOCK
      </span>
    </div>
  </div>
</DocumentFragment>
`;
